[package]
name = "devos"
version = "0.1.0"
edition = "2024"

[build-dependencies]
kernel = { path = "kernel", artifact = "bin", target = "x86_64-unknown-none", default-features = false }
ovmf-prebuilt = "0.2.2"

[workspace]
members = [
    "kernel",
    "kernel/crates/foundation",
    "kernel/crates/virtual_memory_manager",
    "kernel/crates/physical_memory_manager",
]
default-members = [
    ".",
    "kernel/crates/foundation",
    "kernel/crates/virtual_memory_manager",
    "kernel/crates/physical_memory_manager",
]

[dependencies]
clap = { version = "4.5", features = ["derive"] }

[workspace.dependencies]
acpi = "5.2"
bitfield = "0.19"
bitflags = "2.9"
conquer-once = { version = "0.4", default-features = false }
cordyceps = { version = "0.3", default-features = false, features = ["alloc"] }
elf = { version = "0.7", default-features = false, features = ["nightly"] }
jiff = { version = "0.2", default-features = false, features = ["alloc"] }
limine = "0.4"
linked_list_allocator = "0.10"
linkme = "0.3"
log = "0.4"
rustc-demangle = "0.1"
spin = "0.10"
thiserror = { version = "2.0", default-features = false }
uart_16550 = "0.3"
volatile = { version = "0.6", features = ["derive"] }
x2apic = "0.5"
x86_64 = "0.15"
