[package]
name = "kernel"
version = "0.1.0"
edition = "2024"

[dependencies]
virtual_memory_manager = { path = "crates/virtual_memory_manager" }

acpi.workspace = true
bitfield.workspace = true
conquer-once.workspace = true
derive_more.workspace = true
limine.workspace = true
linked_list_allocator.workspace = true
log.workspace = true
seq-macro.workspace = true
spin.workspace = true
thiserror.workspace = true
uart_16550.workspace = true
volatile.workspace = true
x86_64.workspace = true