[package]
name = "kernel"
version = "0.1.0"
edition = "2024"

[dependencies]
physical_memory_manager = { path = "crates/physical_memory_manager" }
virtual_memory_manager = { path = "crates/virtual_memory_manager" }

acpi.workspace = true
bitfield.workspace = true
bitflags.workspace = true
conquer-once.workspace = true
cordyceps.workspace = true
jiff.workspace = true
limine.workspace = true
linked_list_allocator.workspace = true
linkme.workspace = true
log.workspace = true
spin.workspace = true
thiserror.workspace = true
uart_16550.workspace = true
volatile.workspace = true
x2apic.workspace = true
x86_64.workspace = true