[package]
name = "kernel"
version = "0.1.0"
edition = "2024"

[dependencies]
device = { path = "crates/device" }
kernel_elfloader = { path = "crates/kernel_elfloader" }
physical_memory_manager = { path = "crates/physical_memory_manager" }
vfs = { path = "crates/vfs" }
virtual_memory_manager = { path = "crates/virtual_memory_manager" }

acpi.workspace = true
addr2line.workspace = true
bitfield.workspace = true
bitflags.workspace = true
conquer-once.workspace = true
cordyceps.workspace = true
elf.workspace = true
elfloader.workspace = true
jiff.workspace = true
limine.workspace = true
linked_list_allocator.workspace = true
linkme.workspace = true
log.workspace = true
mkfs-ext2.workspace = true
mkfs-filesystem.workspace = true
rustc-demangle.workspace = true
spin.workspace = true
thiserror.workspace = true
uart_16550.workspace = true
virtio-drivers.workspace = true
volatile.workspace = true
x2apic.workspace = true
x86_64.workspace = true