[package]
name = "kernel_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader_api = "0.11"
itertools = { version = "0.10.5", default-features = false, features = ["use_alloc"] }
kernel = { path = "../kernel", default-features = false }
kernel_test_framework = { path = "../kernel_test_framework" }

[features]
default = ["kernel_test"]
kernel_test = ["kernel/kernel_test"]
