[package]
name = "ide"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags.workspace = true
conquer-once.workspace = true
kernel_api.workspace = true
mkfs-filesystem.workspace = true
pci.workspace = true
spin.workspace = true
x86_64.workspace = true
