[package]
name = "vga"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bresenham = "0.1.1"
font8x8 = { version = "0.3.1", default-features = false, features = ["unicode"] }
vga = "0.2.8"
x86_64 = "0.14.10"
