[package]
name = "vga"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bresenham = "0.1.1"
conquer-once = { version = "0.4.0", default-features = false }
graphics = { path = "../graphics" }
spin = "0.9.8"
