[package]
name = "test_kernel_file_vmobject"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader_api.workspace = true
kernel = { path = "../../kernel" }
kernel_api.workspace = true
log.workspace = true
x86_64.workspace = true