[package]
name = "test_kernel_multitasking"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader_api.workspace = true
kernel = { path = "../../kernel" }
log.workspace = true
x86_64.workspace = true