[package]
name = "test_kernel_unittests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader_api.workspace = true
kernel = { path = "../../kernel", features = ["kernel_test"] }
kernel_test_framework.workspace = true
log.workspace = true