[package]
name = "libmuffin"
version = "0.1.0"
edition = "2024"

[lib]
name = "muffin"
crate-type = ["staticlib"]

[dependencies]
kernel_abi = { path = "../../kernel/crates/kernel_abi" }

compiler_builtins = { version = "0.1", features = ["mem"] }
libc = "0.2"
unwinding = { version = "0.2", default-features = false, features = ["unwinder"] }
